[package]
name = "qamd-gateway"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.10"
actix = { version = "0.13.3", features = ["macros"] }
actix-web-actors = "4.2"
actix-cors = "0.7.1"
actix-broker = "0.4"

# Removed tokio, using actix-rt instead
actix-rt = { version = "2.9", features = ["macros"] }

# Utilities (not using tokio-specific functionality)
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging and configuration
log = "0.4"
env_logger = "0.11.8"
config = "0.15.11"
dotenv = "0.15"

# Other utilities
thiserror = "2.0.12"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# WebSocket client example dependencies
tungstenite = "0.26.2"
futures-util = "0.3.31"
url = "2.4"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["connect"] }

ctp2rs = { git = "https://github.com/pseudocodes/ctp2rs", package = "ctp2rs", optional = true }


[features]
default = ["ctp2rs/default"]
